trying to fix static files

--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -3,7 +3,7 @@ container_commands:
     command: "python manage.py migrate"
     leader_only: true
   02_collectstatic:
-    command: "python manage.py collectstatic --noinput"
+    command: "python manage.py dmp_collectstatic --overwrite"
   03_createsu:
     command: "python manage.py createsu"
     leader_only: true
